# WiFiSerialTap

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
scripts/: wst_log.sh
src/: WSTAccessPointManager.h  WSTConfig.h  WSTPreferences.h  WiFiSerialTap.ino
src.ino/WiFiSerialTap/: WSTAccessPointManager.h  WSTPreferences.h  WiFiSerialTap.ino
src/main/: CMakeLists.txt  idf_component.yml  main.c  wst_main.h  wst_ota.c  wst_telnet.c  wst_usb.cpp  wst_wifi.c
